[project]
name = "comfyui-ollama-nodes"
description = "ComfyUI custom nodes for working with [a/Ollama](https://github.com/ollama/ollama).\nNOTE:Assumes that an Ollama server is running at http://127.0.0.1:11434 and accessible by the ComfyUI backend."
version = "1.0.0"
license = "GPL-3.0-or-later"
dependencies = ["ollama", "huggingface_hub"]

[project.urls]
Repository = "https://github.com/slyt/comfyui-ollama-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "slyt"
DisplayName = "comfyui-ollama-nodes"
Icon = ""
